feat(project): finish project
